# SwordStone

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  game  makefile  run
source/: main.cpp
source/configurations/: title_screen.conf  title_screen_parallax.conf
source/resources/fonts/: font_list.txt
source/resources/sprites/tiles/: texture_list.txt
source/resources/tools/tiles_extractor/: main.py
source/scenes/: Character.cpp  Game  Game.cpp  title_screen.cpp
source/scenes/headers/: Character.hpp  Game.hpp  title_screen.hpp
source/scenes/utils/: AnimatedObject.cpp  Button.cpp  CollisionElement.cpp  DrawnButton.cpp  DrawnImage.cpp  DrawnText.cpp  DynamicTile.cpp  Enemy.cpp  FontLoader.cpp  ParallaxBackground.cpp  Player.cpp  StaticTile.cpp  TextureLoader.cpp  Tile.cpp
source/scenes/utils/headers/: AnimatedObject.hpp  Button.hpp  CollisionElement.hpp  DrawnButton.hpp  DrawnImage.hpp  DrawnText.hpp  DynamicTile.hpp  Enemy.hpp  FontLoader.hpp  MusicPlayer.hpp  ParallaxBackground.hpp  Player.hpp  StaticTile.hpp  TextureLoader.hpp  Tile.hpp
